<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4fa5d5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fanhui"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/backha"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:text="历史记录"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    
<LinearLayout
            android:id="@+id/chart"
        	android:layout_width="match_parent"
        	android:layout_height="200dp"
        	android:background="#ffffff"
        	android:orientation="horizontal"
        > 
        </LinearLayout>
        
   <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_marginTop="15dip"
         android:background="#4fa5d5"
          >
        
        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dip"
             android:gravity="center_vertical"
             android:text="周平均分数："
             android:background="@drawable/btn_style_green"
             android:textSize="18dp" />
        
        <TextView
             android:layout_width="wrap_content"
             android:layout_height="30dip"
             android:gravity="center_vertical"
             android:text="82.6"
             android:textSize="25dp" />
        </LinearLayout>
        
       <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@color/green_light"
                android:text="睡眠小助手"
                android:textSize="18dp" /> 
                
       <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:padding="4dip"
                android:text="@string/text_practise3"
                android:textSize="15dip" />
       <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:padding="4dip"
                android:text="@string/text_practise4"
                android:textSize="15dip" />
       <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:padding="4dip"
                android:text="@string/text_practise6"
                android:textSize="15dip" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:padding="4dip"
                android:text="@string/text_practise7"
                android:textSize="15dip" />
          <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:padding="4dip"
                android:text="@string/text_attention1"
                android:textSize="15dip" />
          <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:padding="4dip"
                android:text="@string/text_attention2"
                android:textSize="15dip" />
       

</LinearLayout>