<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >
    
    <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:orientation="horizontal"
         android:background="#4fa5d5"
         >
         
        <Button 
             android:id="@+id/exit"
             android:onClick="onClick"
             android:layout_width="35dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:background="@drawable/backha"
             />
        
        <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="100dp"
             android:text="用户登录"
             android:textSize="20sp"
             android:textColor="#ffffff"
             />
     </LinearLayout>
     
    <TextView 
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#cccccc"
         />
     
    <ImageView
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/back" />
    
      <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:orientation="vertical" >
            
               <LinearLayout
                android:id="@+id/userId_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >
                
                    <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
				<!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->
                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/idtxthint"
                    android:paddingLeft="20dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColorHint="#999999"
                    android:textSize="18sp" >

                    <requestFocus />
                </EditText>
                
                <ImageView
                    android:id="@+id/login_more_user"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/login_more_up" />
            </LinearLayout>
            
               
           <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/pwdtxthint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>
        
           <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#e7e7e7"
            
            >
            <CheckBox 
                android:id="@+id/cb_mima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="记住密码"
                android:layout_weight="3"
                android:textColor="#000000"
                android:textSize="15sp"
                />
            
             <Button 
             android:id="@+id/regist"
             android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="注册账号"
             android:layout_weight="1"
             android:textColor="#4fa5d5"
             android:background="#e7e7e7"
             android:textSize="15sp"
             />
        </LinearLayout>
        
            <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_style"
            android:text="@string/loginbtntext"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>
   
</LinearLayout>